cluster/apps/vaultwarden/vaultwarden-middleware.yaml
# vaultwarden-middleware-headers

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: vaultwarden-middleware-headers
  namespace: vaultwarden
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
    # stsSeconds: 63072000
    # contentSecurityPolicy: |
    #   default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    # script-src 'strict-dynamic' 'nonce-rAnd0m123' 'unsafe-inline' http: https:;
    contentSecurityPolicy: |
      default-src 'self';
      form-action 'none';
      frame-ancestors 'none';
      object-src 'none';
      base-uri 'none';
      require-trusted-types-for 'script';
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      - "https://vault.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"
    customFrameOptionsValue: SAMEORIGIN
