cluster/apps/vaultwarden/vaultwarden-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  strategy:
    # rollingUpdate:
    #   maxSurge: 1
    #   maxUnavailable: 0
    # type: RollingUpdate
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
        name: vaultwarden
      annotations:
        configmap.reloader.stakater.com/reload: "vaultwarden-config"
    spec:
      nodeSelector:
        node-type: worker
      serviceAccountName: vaultwarden
      containers:
      - name: vaultwarden
        image: vaultwarden/server:1.25.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: websocket
          containerPort: 3012
          protocol: TCP
        startupProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
          successThreshold: 1
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
        # resources:
        #   limits:
        #     cpu: 200m
        #     memory: 512Mi
        #   requests:
        #     cpu: 50m
        #     memory: 256Mi
        volumeMounts:
          - name: vaultwarden-data
            mountPath: /data
      restartPolicy: Always
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data-pvc
